force-app/main/default/objects/GLCode_System_Properties__c/GLCode_System_Properties__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>GL Code System Properties</label>
</CustomObject>