force-app/main/default/objects/GLCode_System_Properties__c/fields/Expense_GL_AccountId__c.field-meta.xml
<CustomField>
    <fullName>Expense_GL_AccountId__c</fullName>
    <inlineHelpText>Id of an AccountingSeed GL Account record  in the system which is intended as Expense GL</inlineHelpText>
    <label>Expense GL AccountId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>