force-app/main/default/objects/GLCode_System_Properties__c/fields/Inventory_GL_AccountId__c.field-meta.xml
<CustomField>
    <fullName>Inventory_GL_AccountId__c</fullName>
    <inlineHelpText>Id of AccountingSeed GL Account Record in the system which is intended to be Inventory GL Account</inlineHelpText>
    <label>Inventory GL AccountId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>